tests/baselines/reference/inheritanceMemberPropertyOverridingMethod.errors.txt
==== tests/cases/compiler/inheritanceMemberPropertyOverridingMethod.ts (1 errors) ====
    class a {
        x() {
            return "20";
        }
    }
    
    class b extends a {
          ~
!!! error TS2141: Class 'b' cannot extend class 'a':
!!! 	Class 'b' defines instance member property 'x', but extended class 'a' defines it as instance member function.
        x: () => string;
    }